--- a/practica2/src/main/webapp/registro.html
+++ b/practica2/src/main/webapp/registro.html
@@ -40,43 +40,43 @@
 					</div>
 					<div class="mb-3">
 					  <label for="pwd" class="form-label"><span class="colorUsername"> Password:</span></label>
-					  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="clave" required>
+					  <input type="password" class="form-control" placeholder="Enter password" name="clave" required>
 					  <div class="valid-feedback">Valid.</div>
 					  <div class="invalid-feedback">Please fill out this field.</div>
 					</div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername"> Nombre:</span></label>
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter nombre" name="nombre" required>
+                        <input type="text" class="form-control"  placeholder="Enter nombre" name="nombre" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername"> Apellidos:</span></label>
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter apellidos" name="apellidos" required>
+                        <input type="text" class="form-control"  placeholder="Enter apellidos" name="apellidos" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername">Domicilio</span></label>
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter domicilio" name="domicilio" required>
+                        <input type="text" class="form-control" placeholder="Enter domicilio" name="domicilio" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername"> Provincia:</span></label>
-                        <input type="text"class="form-control" id="pwd" placeholder="Enter provincia" name="provincia" required>
+                        <input type="text"class="form-control"  placeholder="Enter provincia" name="provincia" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername">CP:</span></label>
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter codigo postal" name="cp" required>
+                        <input type="text" class="form-control" placeholder="Enter codigo postal" name="cp" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
                     <div class="mb-3">
                         <label for="pwd" class="form-label"><span class="colorUsername"> Telefono:</span></label>
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter telefono" name="tlf" required>
+                        <input type="text" class="form-control" placeholder="Enter telefono" name="tlf" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                     </div>
